experimental support for the Canon PIXMA iP4500

--- a/NEWS
+++ b/NEWS
@@ -160,6 +160,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
         Canon BJC5500
         Canon BJC8500
 	Canon Pixma iX5000
+	Canon Pixma iP4500
 	Canon Pixma iP5300
 	Canon Pixma MP170
 	Canon Pixma MP180
