Prep for 5.0.2-beta1.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Welcome to Gutenprint 5.0.2-beta1!  Please read these release notes
-carefully.
+Welcome to Gutenprint 5.0.2-beta1 (5.0.0.98.1)!  Please read these
+release notes carefully.
 
 Gutenprint, formerly named Gimp-Print, is a suite of printer drivers
 that may be used with most common UNIX print spooling systems,
