--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.1.4!  Please read these release notes
+Welcome to Gutenprint 5.1.5!  Please read these release notes
 carefully.
 
 Gutenprint, formerly named Gimp-Print, is a suite of printer drivers
@@ -24,7 +24,7 @@ German.
 
 Gutenprint currently supports over 600 printer models.
 
-Gutenprint 5.1.4 is a development release of Gutenprint 5.1.
+Gutenprint 5.1.5 is a development release of Gutenprint 5.1.
 
 *** NOTE TO PACKAGERS: This is a DEVELOPMENT version of Gutenprint.
     It should not be packaged as the principal release of Gutenprint
@@ -49,11 +49,12 @@ These release notes contain the following sections:
 
 I)    General Requirements
 II)   Changes from Previous Releases
-	A) New features in 5.1.4
-	B) New features in 5.1.3
-	C) New features in 5.1.2
-	D) New features in 5.1.1
-	E) New features in 5.1.0
+	A) New features in 5.1.5
+	B) New features in 5.1.4
+	C) New features in 5.1.3
+	D) New features in 5.1.2
+	E) New features in 5.1.1
+	F) New features in 5.1.0
 III)   Exceptions and Workarounds
 	A) General Issues
 	B) Build/Installation Issues
@@ -128,7 +129,72 @@ for building and installing Gutenprint.
 
 II) MAJOR CHANGES FROM PREVIOUS RELEASES
 
-A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
+A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.5:
+
+   1) New printers supported in this release:
+
+      * Epson inkjet printers:
+
+      	EPSON Stylus C110
+      	EPSON Stylus C120
+      	EPSON Stylus D120
+      	EPSON PX V780
+
+   2) Preliminary support for the following printers:
+
+      * Canon inkjet printers:
+
+      	Canon PIXMA Pro 9500
+	Canon PIXMA MP610
+	Canon i80
+
+   3) The printer maintenance utility for EPSON inkjet printers,
+      escputil, now reports status more reliably.  Previously some
+      people reported errors of the form "Unknown IEEE 1284.4 error";
+      these errors have been resolved.
+
+      In addition, escputil now correctly reports the ink color for
+      certain printers (in particular, printers using Claria (TM) inks
+      and printers using alternate ink cartridges (for example, the
+      Stylus Photo 1400 that allows either a photo black or a matte
+      black ink cartridge to be installed).
+
+   4) A few remaining problems with the PPD files have been fixed
+      (paper sizes for certain dye sublimation printers, and "Okidata"
+      has been renamed "Oki" to match the PPD specification for that
+      manufacturer).
+
+   5) The PPD file parsing code in the Postscript driver has been
+      rewritten.
+
+      We determined that the PPD file parsing code in the Postscript
+      driver was actually borrowed from CUPS, which is licensed under
+      the LGPL v2 and GPL v2 only.  However, the remainder of the core
+      of Gutenprint is licensed under GPL v2 or higher.  This is not
+      directly a license conflict -- it is permissible to mix code
+      licensed under the GPL v2 with code licensed under GPL v2 or
+      above -- but it means that Gutenprint (5.1.3 and 5.1.4, the two
+      releases that used this code) itself could only be licensed
+      under GPL v2, which is not the desire of this project, as it
+      would not permit usage with code licensed under GPL v3 (or
+      higher) only.
+
+      To resolve this, we wrote new PPD file parsing code that is
+      licensed under GPL v2 or above.  Therefore, Gutenprint may now
+      be used with any code licensed as GPL v2 or any later version of
+      the GPL.
+
+   6) The CUPS driver in Gutenprint, and all associated utilities, are
+      now licensed as GPL v2 or higher.  That code was previously
+      licensed as GPL v2 only.  While that did not cause any direct
+      problems, since the CUPS driver does not form a library that
+      other code may wish to link against, it was licensed differently
+      from the rest of the Gutenprint project.  That is now resolved,
+      and the entire Gutenprint code base is now licensed as GPL v2 or
+      higher.
+
+
+B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
 
    1) New printers supported in this release:
 
@@ -425,7 +491,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
 
 ----------------
 
-B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.3:
+C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.3:
 
   1) The Canon PIXMA iP4300 and related printers now print black
      properly.
@@ -440,7 +506,7 @@ B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.3:
 
 ----------------
 
-C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:
+D) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:
 
   1) Improved tunings for Epson printers using Claria inks.
 
@@ -473,7 +539,7 @@ C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:
 
 ----------------
 
-D) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
+E) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
 
   1) New printers supported in this release:
 
@@ -551,7 +617,7 @@ D) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
 
 ----------------
 
-E) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:
+F) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:
 
   1) New printers supported in this release:
 
