added Piotr Stachura to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -89,6 +89,9 @@ Mike Sweet		<mike@easysw.com>
 Peter Missel		<peter.missel@eplus-online.de>
 	Canon driver
 
+Piotr Stachura          <albert1@autocom.pl>
+	Canon PIXMA iP4200 support
+
 Richard Wisenoecker	<Richard.Wisenoecker@gmx.at>
 	Lexmark driver
 
