--- a/README
+++ b/README
@@ -1,21 +1,21 @@
-Welcome to Gutenprint 5.0.2-beta1!  Please read these notes carefully.
+Welcome to Gutenprint 5.0.2!  Please read these notes carefully.
 
 ================================================================
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.0.2-beta1, a stable release of
-    Gutenprint 5.0.  Gutenprint, formerly named Gimp-Print, is a suite
-    of printer drivers that may be used with most common UNIX print
-    spooling systems, including CUPS, lpr, LPRng, or others.  These
-    drivers provide high quality printing for UNIX (including
-    Macintosh OS X 10.2 and newer) and Linux systems in many cases
-    equal to or better than proprietary vendor-supplied drivers.
-    Gutenprint also includes an enhanced print plug-in for the GIMP
-    image editor, replacing the Gimp-Print 4.2-based plugin supplied
-    with GIMP 1.2, 2.0, and 2.2, and offering an alternative with
-    additional capabilities to the GtkPrint-based plugin supplied with
-    GIMP 2.4 and beyond.
+    This is Gutenprint version 5.0.2, a stable release of Gutenprint
+    5.0.  Gutenprint, formerly named Gimp-Print, is a suite of printer
+    drivers that may be used with most common UNIX print spooling
+    systems, including CUPS, lpr, LPRng, or others.  These drivers
+    provide high quality printing for UNIX (including Macintosh OS X
+    10.2 and newer) and Linux systems in many cases equal to or better
+    than proprietary vendor-supplied drivers.  Gutenprint also
+    includes an enhanced print plug-in for the GIMP image editor,
+    replacing the Gimp-Print 4.2-based plugin supplied with GIMP 1.2,
+    2.0, and 2.2, and offering an alternative with additional
+    capabilities to the GtkPrint-based plugin supplied with GIMP 2.4
+    and beyond.
 
     Gutenprint has been renamed in order to clearly distinguish it
     from GIMP.  While this package started out as the Print plugin for
@@ -115,7 +115,7 @@ A) OVERVIEW
 	gimp-print-devel@lists.sourceforge.net
 
 	================================================================
-	  Release: gutenprint 5.0.1.98.1 generated on 15 Dec 2007
+	  Release: gutenprint 5.0.2 generated on 29 Dec 2007
 
 	  Features:
 	    Build CUPS:                                 yes, installing in /usr
@@ -139,8 +139,8 @@ A) OVERVIEW
 	    Installation prefix:                        /usr/local
 	    Data directory:                             /usr/local/share/gutenprint
 	    Library directory:                          /usr/local/lib/gutenprint
-	    XML data directory:                         /usr/local/share/gutenprint/5.0.1.98.1/xml
-	    Module directory:                           /usr/local/lib/gutenprint/5.0.1.98.1/modules
+	    XML data directory:                         /usr/local/share/gutenprint/5.0.2/xml
+	    Module directory:                           /usr/local/lib/gutenprint/5.0.2/modules
 	    Install sample images:                      yes
 
 	General configuration:
