Correct number of supported printers.

--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,7 @@ Gutenprint recognizes Johannes Gutenberg, the inventor of the movable
 type printing press.  Finally, the word "guten" means "good" in
 German.
 
-Gutenprint currently supports over 600 printer models.
+Gutenprint currently supports about 700 printer models.
 
 Gutenprint 5.1.7 is a development release of Gutenprint 5.1.
 
